# RAG-based-Legal-Assistant

./: .env  .gitignore  MessagePlaceholder.ipynb  README.md  app.py  data-ingestion-v1.0.py  data-ingestion.py  main-app-v1.0.py  main-app.py  main-notebook.ipynb  pyproject.toml  requirement-v.0.txt  requirements.txt  test-cases.txt  test.py  testing-main.py  testing-notebook.ipynb  testing-summary.ipynb
OLD/: main-app.py
data-ingestion-local/381599f3-130c-44b2-a5fc-549501d64f90/: index_metadata.pickle
prompts/: mainRAG-prompt.md  multiQuery-prompt.md
subparts/: multi-query-part.py  reciprocal-ranking-fusion-RRF.py
vector-store/: index.faiss  index.pkl
